--- a/Python/src/commvault/template/CreateInstance_Template.xml
+++ b/Python/src/commvault/template/CreateInstance_Template.xml
@@ -23,7 +23,7 @@
 			<dataArchiveGroup>
 				<storagePolicyName/>
 			</dataArchiveGroup>
-			<disableRMANcrosscheck>false</disableRMANcrosscheck>
+			<disableRMANcrosscheck>true</disableRMANcrosscheck>
 			<encryptionFlag/>
 			<isOnDemand>false</isOnDemand>
 			<numberOfArchiveLogBackupStreams>1</numberOfArchiveLogBackupStreams>
